--- a/src/css/search.css
+++ b/src/css/search.css
@@ -26,7 +26,7 @@
   margin-right: 25px;
 }
 
-@media screen and (min-width: 1023px) {
+@media screen and (min-width: 1060px) {
   #search-input {
     width: 400px;
     height: 38px;
